Arreglo de Categoria View se arregla el binder Guarda una categoria Falta que las consulte. Se cambia de Artefacto vaadin a vaadin-core el Free